# catalogo-livros

./: .dockerignore  .pre-commit-config.yaml  .tool-versions  LICENSE  README.md  example.env  manage.py  package.json  pyproject.toml
catalogo/: asgi.py  settings.py  urls.py  wsgi.py
